@@ -1,4 +1,4 @@
-# LIST OF CHANGES FROM LAST RELEASE:			<$Revision: 1.1739 $>
+# LIST OF CHANGES FROM LAST RELEASE:			<$Revision: 1.1740 $>
 #
 #
 # [Note: This file does not mention every change made to the NetBSD source tree.
@@ -107,3 +107,5 @@ Changes from NetBSD 6.0 to NetBSD 7.0:
 	mfi(8): Added support for LSI SAS2208-based controllers.
 		[bouyer 20120823]
 	mkdep(1): Add -P option.  [jmmv 20120826]
+	share/mk: Add placeholder test programs (with some very basic test
+		cases within) for common bsd.*.mk modules.  [jmmv 20120826]
